<resources>
    <string name="app_name">app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_in">Log in</string>
    <string name="server_resources_placeholder">Data placeholder</string>
    <string name="server_resources_placeholder_desc">Resources received from server</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out">Log out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name_literal">Username</string>
    <string name="user_email_literal">Email</string>
    <string name="user_name_label">Name:</string>
    <string name="user_email_label">Email:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetch_data">Fetch data</string>
    <string name="welcome_message">Welcome to the OAuth 2.0 testing application!</string>
    <string name="login_info_required">Hi user! It seems that you need to log in!</string>
    <string name="login_in_progress">Logging in...</string>
    <string name="user_nick_literal">Nickname</string>
    <string-array name="auth_required_scopes">
        <item>username</item>
    </string-array>
</resources>